2010-06-03  Barak A. Pearlmutter  <barak@cs.nuim.ie>

	* texinfo/bbdb.texinfo: include pointers to github repo.

2010-04-20  Barak A. Pearlmutter  <barak@cs.nuim.ie>

	* README: Emacs, meaning both GNU Emacs and XEmacs.
	* lisp/bbdb.el: By the powers vested in me by git cvsimport and
	the state of inebriation, I declare this to be BBDB version 2.36.
	BBDB-2.36 - Let the games begin.

2010-03-09  Barak A. Pearlmutter  <barak@cs.nuim.ie>

	* texinfo/bbdb.texinfo: remove @ifinfo guard to eliminate
	texi2html error.

2009-11-18  Barak A. Pearlmutter  <barak@cs.nuim.ie>

	* lisp/bbdb-rmail.el (bbdb/rmail-get-header-content): Fix RMAIL
	insinuation in GNU Emacs23 by using rmail-get-header when
	available, thus avoiding rmail-narrow-to-non-pruned-header, which
	no longer exists in GNU Emacs 23.

2008-01-29  Didier Verna  <didier@xemacs.org>

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author): Use the proper
	nnheader interface for retrieving header values.

2008-01-29  Didier Verna  <didier@xemacs.org>

	Handle recent type change of gnus-ignored-from-addresses.
	* lisp/bbdb-gnus.el (bbdb/gnus-ignored-from-addresses): New.
	* lisp/bbdb-gnus.el (bbdb/gnus-update-records): Use it.
	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author): Ditto.

2008-01-29  Didier Verna  <didier@xemacs.org>

	* lisp/bbdb-com.el (bbdb-define-all-aliases): Rewrite docstring
	and format it properly for describe-function.

2008-01-29  Didier Verna  <didier@xemacs.org>

	* lisp/bbdb-com.el (bbdb-collect-all-aliases): Fix infite loop due
	to misplaced iteration. This occurred when triggering the warning.

2007-12-08  Kousik Nandy <kousik.nandy@gmail.com>

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author):
	bbdb/gnus-summary-get-author() fails if no To/Cc/Newsgroup is
	present (in newer Gnus)

2007-12-05  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-dwim-net-address-title-field): New field
	controlling if a title is prepended to an email address.  The
	default value is 'title.
